Adicionando um header
Adicionando uma tag header com o vim configurado

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 	<link rel="stylesheet" href="assets/css/estilos.css">
 </head>
 <body>
+	<header>
+		<ul>
+			<li><a href="ourprojects.html">Projetos</a></li>
+		</ul>
+	</header>
+
 	<div class="topCasaFina-bannerWrapper">
 		<div class="topCasaFina-banner">
 			<h1>TopCasaFina Arquitetura</h1>
