Aula01 - criando um header

--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
 </head>
 <body>
 	<header>
-		<ul>
-			<li><a href="ourprojects.html">Projetos</a></li>
-		</ul>
+		<nav>
+			<a href="index.html">Home</a>
+			<a href="ourprojects.html">Projetos</a>
+			<a href="testimonies.html">Depoimentos</a>
+			<a href="about.html">Sobre</a>
+		</nav>
 	</header>
 
 	<div class="topCasaFina-bannerWrapper">
