--- a/testimonies.html
+++ b/testimonies.html
@@ -6,7 +6,15 @@
 	<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" href="assets/css/estilos.css">
 </head>
-<body>
+<ody>
+	<header>
+		<nav>
+			<a href="index.html">Home</a>
+			<a href="ourprojects.html">Projetos</a>
+			<a href="testimonies.html">Depoimentos</a>
+			<a href="about.html">Sobre</a>
+		</nav>
+	</header>
 	<section id="depoimentos">
 
 		<h2 class="container titulo-depoimentos">Depoimentos de Clientes</h2>
