Aula04 Preenchendo a página de código

--- a/testimonies.html
+++ b/testimonies.html
@@ -22,14 +22,14 @@
 		<div id="carousel-example-generic" class="carousel slide">
 			<!-- Indicators -->
 			<ol class="carousel-indicators">
-				<li class="active"></li>
-				<li></li>
-				<li></li>
+				<li class="active" id="botao-1-depoimentos"></li>
+				<li id="botao-2-depoimentos"></li>
+				<li id="botao-3-depoimentos"></li>
 			</ol>
 
 			<!-- Wrapper for slides -->
 			<div class="carousel-inner">
-				<figure class="item active">
+				<figure class="item active" id="figura-1-depoimentos. id="figura-1-d-->
 					<img src="assets/img/depoimentos/depoimento1.png" alt="Depoimento 1">
 					<figcaption class="carousel-caption">
 						<h3>Yuri Padilha</h3>
@@ -61,12 +61,67 @@
 				<span class="sr-only">Next</span>
 			</a>
 		</div>
+
 	</section>
+	
+	<div class="container panel-group">
+		<h3>Outros depoimentos </h3>
+		<div class="panel panel-default">
+			<div class="panel-heading">Junior Pimentel</div>
+			<div class="panel-body">Agora encontrei o que eu queria</div>
+		</div>
+		<div class="panel panel-default">
+			<div class="panel-heading">Luis ALberto</div>
+			<div class="panel-body">Achei um ótimo preço</div>
+		</div>
+		<div class="panel panel-default">
+			<div class="panel-heading">Ana Carolina</div>
+			<div class="panel-body">Adorei o projeto final</div>
+		</div>
+		<div class="panel panel-default">
+			<div class="panel-heading">Maison</div>
+			<div class="panel-body">N]ao vi vantagem ainda:</div>
+		</div>
+		<div class="panel panel-default">
+			<div class="panel-heading">Jose Carla</div>
+			<div class="panel-body">O mlehor que ja vi</div>
+		</div>
+		<div class="panel panel-default">
+			<div class="panel-heading">Luciano</div>
+			<div class="panel-body">Agora vai</div>
+		</div>
+		<div class="panel panel-default">
+			<div class="panel-heading">José</div>
+			<div class="panel-body">Eu escolhi gastar</div>
+		</div>
+		<div class="panel panel-default">
+			<div class="panel-heading">Anthony</div>
+			<div class="panel-body">Just moment please</div>
+		</div>
+		<div class="panel panel-default">
+			<div class="panel-heading">Lucas</div>
+			<div class="panel-body">Silverado</div>
+		</div>
+		<div class="panel panel-default">
+			<div class="panel-heading">Ramon</div>
+			<div class="panel-body">Arthur</div>
+		</div>
+	</div>
+	<footer>
 	<footer>
 		<address>
-			<strong>TopCasaFina Arquitetura</strong><br>
-			E-mail: contato.topcasafina@alura.com.br
+			<h3> Tire o projeto do papel! Fale conosco para um orçamento </h3>
+			E-mail: contato.topcasafina@alura.com.br<br>
+			Telefone: (11) 4305-5974 <br>
+			Pager: 8456258965<br>
+			Fax: +55-12-1212122<br>
 		</address>
+		<div>
+			<h3> Parceiros e Fornecedores </h3>
+			TopMassa Fina Construção <br>
+			Pedro Cimentos <br>
+			Simão Movéis <br>
+			
 	</footer>
 </body>
 </html>
