--- a/ourprojects.html
+++ b/ourprojects.html
@@ -78,9 +78,18 @@
 	</section>
 	<footer>
 		<address>
-			<strong>TopCasaFina Arquitetura</strong><br>
-			E-mail: contato.topcasafina@alura.com.br
+			<h3> Tire o projeto do papel! Fale conosco para um orçamento </h3>
+			E-mail: contato.topcasafina@alura.com.br<br>
+			Telefone: (11) 4305-5974 <br>
+			Pager: 8456258965<br>
+			Fax: +55-12-1212122<br>
 		</address>
+		<div>
+			<h3> Parceiros e Fornecedores </h3>
+			TopMassa Fina Construção <br>
+			Pedro Cimentos <br>
+			Simão Movéis <br>
+			
 	</footer>
 </body>
 </html>
