Revert "Aula04 Preenchendo a página de código"
This reverts commit 4fe50497f113bcdbf9e7eed60806e1332d9a5fd0.

--- a/index.html
+++ b/index.html
@@ -34,63 +34,12 @@
 			</section>
 		</div>
 	</div>
-	<div class="container panel-group">
-		<div class="panel panel-default">
-			<div class="panel-heading"></div>
-			<div class="panel-body"></div>
-		</div>
-		<div class="panel panel-default">
-			<div class="panel-heading">Luis ALberto</div>
-			<div class="panel-body">Achei um ótimo preço</div>
-		</div>
-		<div class="panel panel-default">
-			<div class="panel-heading">Ana Carolina</div>
-			<div class="panel-body">Adorei o projeto final</div>
-		</div>
-		<div class="panel panel-default">
-			<div class="panel-heading">Maison</div>
-			<div class="panel-body">N]ao vi vantagem ainda:</div>
-		</div>
-		<div class="panel panel-default">
-			<div class="panel-heading"></div>
-			<div class="panel-body"></div>
-		</div>
-		<div class="panel panel-default">
-			<div class="panel-heading"></div>
-			<div class="panel-body"></div>
-		</div>
-		<div class="panel panel-default">
-			<div class="panel-heading"></div>
-			<div class="panel-body"></div>
-		</div>
-		<div class="panel panel-default">
-			<div class="panel-heading"></div>
-			<div class="panel-body"></div>
-		</div>
-		<div class="panel panel-default">
-			<div class="panel-heading"></div>
-			<div class="panel-body"></div>
-		</div>
-		<div class="panel panel-default">
-			<div class="panel-heading"></div>
-			<div class="panel-body"></div>
-		</div>
-	</div>
+
 	<footer>
 		<address>
-			<h3> Tire o projeto do papel! Fale conosco para um orçamento </h3>
-			E-mail: contato.topcasafina@alura.com.br<br>
-			Telefone: (11) 4305-5974 <br>
-			Pager: 8456258965<br>
-			Fax: +55-12-1212122<br>
+			<strong>TopCasaFina Arquitetura</strong><br>
+			E-mail: contato.topcasafina@alura.com.br
 		</address>
-		<div>
-			<h3> Parceiros e Fornecedores </h3>
-			TopMassa Fina Construção <br>
-			Pedro Cimentos <br>
-			Simão Movéis <br>
-		</div>
-
 	</footer>
 </body>
 </html>
