--- a/about.html
+++ b/about.html
@@ -10,9 +10,9 @@
 	<header>
 		<nav>
 			<a href="index.html">Home</a>
+			<a href="about.html">Sobre</a>
 			<a href="ourprojects.html">Projetos</a>
 			<a href="testimonies.html">Depoimentos</a>
-			<a href="about.html">Sobre</a>
 		</nav>
 	</header>
 	<section id="sobre-nos" class="container">
@@ -70,18 +70,18 @@
 
 	<footer>
 		<address>
-			<h3> Tire o projeto do papel! Fale conosco para um orçamento </h3>
+			<h3> Tire o projeto do papel! Fale conosco para um orçamento</h3>
 			E-mail: contato.topcasafina@alura.com.br<br>
-			Telefone: (11) 4305-5974 <br>
-			Pager: 8456258965<br>
-			Fax: +55-12-1212122<br>
+			Telefone: (11) 4305-5974<br>
+			Pager: 8469364820<br>
+			Fax: +44-12-9874273<br>
 		</address>
 		<div>
-			<h3> Parceiros e Fornecedores </h3>
-			TopMassa Fina Construção <br>
-			Pedro Cimentos <br>
-			Simão Movéis <br>
-			
+			<h3>Parceiros e Fornecedores</h3>
+			TopMassa Fina Construção<br>
+			Pedro Cimentos<br>
+			Simão Moveis<br>
+		</div>
 	</footer>
 </body>
 </html>
