--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
 	<header>
 		<nav>
 			<a href="index.html">Home</a>
+			<a href="about.html">Sobre</a>
 			<a href="ourprojects.html">Projetos</a>
 			<a href="testimonies.html">Depoimentos</a>
-			<a href="about.html">Sobre</a>
 		</nav>
 	</header>
-
 	<div class="topCasaFina-bannerWrapper">
 		<div class="topCasaFina-banner">
 			<h1>TopCasaFina Arquitetura</h1>
@@ -34,63 +33,21 @@
 			</section>
 		</div>
 	</div>
-	<div class="container panel-group">
-		<div class="panel panel-default">
-			<div class="panel-heading"></div>
-			<div class="panel-body"></div>
-		</div>
-		<div class="panel panel-default">
-			<div class="panel-heading">Luis ALberto</div>
-			<div class="panel-body">Achei um ótimo preço</div>
-		</div>
-		<div class="panel panel-default">
-			<div class="panel-heading">Ana Carolina</div>
-			<div class="panel-body">Adorei o projeto final</div>
-		</div>
-		<div class="panel panel-default">
-			<div class="panel-heading">Maison</div>
-			<div class="panel-body">N]ao vi vantagem ainda:</div>
-		</div>
-		<div class="panel panel-default">
-			<div class="panel-heading"></div>
-			<div class="panel-body"></div>
-		</div>
-		<div class="panel panel-default">
-			<div class="panel-heading"></div>
-			<div class="panel-body"></div>
-		</div>
-		<div class="panel panel-default">
-			<div class="panel-heading"></div>
-			<div class="panel-body"></div>
-		</div>
-		<div class="panel panel-default">
-			<div class="panel-heading"></div>
-			<div class="panel-body"></div>
-		</div>
-		<div class="panel panel-default">
-			<div class="panel-heading"></div>
-			<div class="panel-body"></div>
-		</div>
-		<div class="panel panel-default">
-			<div class="panel-heading"></div>
-			<div class="panel-body"></div>
-		</div>
-	</div>
+
 	<footer>
 		<address>
-			<h3> Tire o projeto do papel! Fale conosco para um orçamento </h3>
+			<h3> Tire o projeto do papel! Fale conosco para um orçamento</h3>
 			E-mail: contato.topcasafina@alura.com.br<br>
-			Telefone: (11) 4305-5974 <br>
-			Pager: 8456258965<br>
-			Fax: +55-12-1212122<br>
+			Telefone: (11) 4305-5974<br>
+			Pager: 8469364820<br>
+			Fax: +44-12-9874273<br>
 		</address>
 		<div>
-			<h3> Parceiros e Fornecedores </h3>
-			TopMassa Fina Construção <br>
-			Pedro Cimentos <br>
-			Simão Movéis <br>
+			<h3>Parceiros e Fornecedores</h3>
+			TopMassa Fina Construção<br>
+			Pedro Cimentos<br>
+			Simão Moveis<br>
 		</div>
-
 	</footer>
 </body>
 </html>
