--- a/testimonies.html
+++ b/testimonies.html
@@ -6,13 +6,13 @@
 	<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" href="assets/css/estilos.css">
 </head>
-<ody>
+<body>
 	<header>
 		<nav>
 			<a href="index.html">Home</a>
+			<a href="about.html">Sobre</a>
 			<a href="ourprojects.html">Projetos</a>
 			<a href="testimonies.html">Depoimentos</a>
-			<a href="about.html">Sobre</a>
 		</nav>
 	</header>
 	<section id="depoimentos">
@@ -29,21 +29,21 @@
 
 			<!-- Wrapper for slides -->
 			<div class="carousel-inner">
-				<figure class="item active" id="figura-1-depoimentos. id="figura-1-d-->
+				<figure class="item active" id="figura-1-depoimentos">
 					<img src="assets/img/depoimentos/depoimento1.png" alt="Depoimento 1">
 					<figcaption class="carousel-caption">
 						<h3>Yuri Padilha</h3>
 						<p>Gostei muito e achei rápido o serviço.</p>
 					</figcaption>
 				</figure>
-				<figure class="item">
+				<figure class="item" id="figura-2-depoimentos">
 					<img src="assets/img/depoimentos/depoimento2.png" alt="Depoimento 2">
 					<figcaption class="carousel-caption">
 						<h3>Fernando Stafaneni</h3>
 						<p>Excelente trabalho.</p>
 					</figcaption>
 				</figure>
-				<figure class="item">
+				<figure class="item" id="figura-3-depoimentos">
 					<img src="assets/img/depoimentos/depoimento3.png" alt="Depoimento 3">
 					<figcaption class="carousel-caption">
 						<h3>Caio Sauzas</h3>
@@ -61,67 +61,65 @@
 				<span class="sr-only">Next</span>
 			</a>
 		</div>
-
 	</section>
-	
 	<div class="container panel-group">
-		<h3>Outros depoimentos </h3>
+		<h3>Outros depoimentos</h3>
 		<div class="panel panel-default">
-			<div class="panel-heading">Junior Pimentel</div>
-			<div class="panel-body">Agora encontrei o que eu queria</div>
-		</div>
-		<div class="panel panel-default">
-			<div class="panel-heading">Luis ALberto</div>
-			<div class="panel-body">Achei um ótimo preço</div>
+			<div class="panel-heading">Luis Alberto</div>
+			<div class="panel-body">Achei um ótimo preço!</div>
 		</div>
 		<div class="panel panel-default">
 			<div class="panel-heading">Ana Carolina</div>
-			<div class="panel-body">Adorei o projeto final</div>
+			<div class="panel-body">Adorei o projeto final!</div>
 		</div>
 		<div class="panel panel-default">
-			<div class="panel-heading">Maison</div>
-			<div class="panel-body">N]ao vi vantagem ainda:</div>
+			<div class="panel-heading">Luisa Guimarães</div>
+			<div class="panel-body">Ficou pronto muito rápido.</div>
 		</div>
 		<div class="panel panel-default">
-			<div class="panel-heading">Jose Carla</div>
-			<div class="panel-body">O mlehor que ja vi</div>
+			<div class="panel-heading">Gabriel</div>
+			<div class="panel-body">Contrataria de novo.</div>
 		</div>
 		<div class="panel panel-default">
-			<div class="panel-heading">Luciano</div>
-			<div class="panel-body">Agora vai</div>
+			<div class="panel-heading">Pedro</div>
+			<div class="panel-body">Não sei por que não fiz antes.</div>
 		</div>
 		<div class="panel panel-default">
-			<div class="panel-heading">José</div>
-			<div class="panel-body">Eu escolhi gastar</div>
+			<div class="panel-heading">Nicholas</div>
+			<div class="panel-body">Melhor casa que já construi.</div>
 		</div>
 		<div class="panel panel-default">
-			<div class="panel-heading">Anthony</div>
-			<div class="panel-body">Just moment please</div>
+			<div class="panel-heading">Hanna</div>
+			<div class="panel-body">Sempre quis uma casa assim, consegui!</div>
 		</div>
 		<div class="panel panel-default">
-			<div class="panel-heading">Lucas</div>
-			<div class="panel-body">Silverado</div>
+			<div class="panel-heading">Thais</div>
+			<div class="panel-body">Meu sonho! Ficou ótimo!</div>
 		</div>
 		<div class="panel panel-default">
-			<div class="panel-heading">Ramon</div>
-			<div class="panel-body">Arthur</div>
+			<div class="panel-heading">Paulo</div>
+			<div class="panel-body">Não conseguiria fazer melhor eu mesmo!</div>
+		</div>
+		<div class="panel panel-default">
+			<div class="panel-heading">Alberto</div>
+			<div class="panel-body">Adorei!</div>
 		</div>
 	</div>
 	<footer>
-	<footer>
 		<address>
-			<h3> Tire o projeto do papel! Fale conosco para um orçamento </h3>
+			<h3> Tire o projeto do papel! Fale conosco para um orçamento</h3>
 			E-mail: contato.topcasafina@alura.com.br<br>
-			Telefone: (11) 4305-5974 <br>
-			Pager: 8456258965<br>
-			Fax: +55-12-1212122<br>
+			Telefone: (11) 4305-5974<br>
+			Pager: 8469364820<br>
+			Fax: +44-12-9874273<br>
 		</address>
 		<div>
-			<h3> Parceiros e Fornecedores </h3>
-			TopMassa Fina Construção <br>
-			Pedro Cimentos <br>
-			Simão Movéis <br>
-			
+			<h3>Parceiros e Fornecedores</h3>
+			TopMassa Fina Construção<br>
+			Pedro Cimentos<br>
+			Simão Moveis<br>
+		</div>
 	</footer>
+	<script src="assets/js/testimonies.js"></script>
 </body>
 </html>
